add function register and remember me

--- a/src/assets/styles/mixin.less
+++ b/src/assets/styles/mixin.less
@@ -1,8 +1,6 @@
-@import "./footer.less"; // fx67ll所有网站的统一footer样式
-
 // 引入苹果字体
 @font-face {
-	font-family: 'PFR';
+	font-family: 'PFRE';
 	src: url('~@a/fonts/PingFang Regular En.ttf') format('truetype');
 }
 
